--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "test": {
     "scripts":{
         "test-setup": "npm i",
+        "setup-mocha": "npm i mocha -g",
         "test": "mocha"
     },
       "env": {
