--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
